--- a/gill/gill-next-tailwind-counter/.prettierignore
+++ b/gill/gill-next-tailwind-counter/.prettierignore
@@ -1,6 +1,6 @@
 # Add files here to ignore them from prettier formatting
 /trezoaanchor/src/client/js/generated
-/trezoaanchor/.anchor
+/trezoaanchor/.trezoaanchor
 /trezoaanchor/target/debug
 /trezoaanchor/target/deploy
 /trezoaanchor/target/release
