--- a/web3js/web3js-react-vite-tailwind-basic/.gitignore
+++ b/web3js/web3js-react-vite-tailwind-basic/.gitignore
@@ -27,13 +27,13 @@ dist-ssr
 *.tsbuildinfo
 /tmp
 
-# TrezoaTrezoaAnchor
-/trezoatrezoaanchor/.trezoaanchor
-/trezoatrezoaanchor/target/debug
-/trezoatrezoaanchor/target/deploy
-/trezoatrezoaanchor/target/release
-/trezoatrezoaanchor/target/sbf-trezoa-trezoa
-/trezoatrezoaanchor/target/test-ledger
-/trezoatrezoaanchor/target/.rustc_info.json
+# TrezoaAnchor
+/trezoaanchor/.trezoaanchor
+/trezoaanchor/target/debug
+/trezoaanchor/target/deploy
+/trezoaanchor/target/release
+/trezoaanchor/target/sbf-trezoa-trezoa
+/trezoaanchor/target/test-ledger
+/trezoaanchor/target/.rustc_info.json
 test-ledger
 **/*.rs.bk
