Apply migration and rebranding updates

--- a/community/gill-node-trezoax402/env.example
+++ b/community/gill-node-trezoax402/env.example
@@ -12,12 +12,12 @@ SERVER_URL=http://localhost:3000
 FACILITATOR_URL=http://localhost:3001
 
 # Merchant Configuration
-MERCHANT_TRZANA_ADDRESS=your_merchant_wallet_address_here
+MERCHANT_TREZOA_ADDRESS=your_merchant_wallet_address_here
 
 # Trezoa Configuration
-TRZANA_RPC_URL=https://api.devnet.trezoa.com
-TRZANA_WS_URL=wss://api.devnet.trezoa.com
-TRZANA_NETWORK=devnet
+TREZOA_RPC_URL=https://api.devnet.trezoa.com
+TREZOA_WS_URL=wss://api.devnet.trezoa.com
+TREZOA_NETWORK=devnet
 
 # Database Configuration
 DATABASE_PATH=./src/facilitator/nonce.db
@@ -30,7 +30,7 @@ NONCE_EXPIRY_HOURS=24
 SIMULATE_TRANSACTIONS=true
 
 # Optional: USDC Token Configuration (Devnet)
-USDC_MINT_ADDRESS=4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
+USDC_MINT_ADDRESS=EFewYfHeQhkKpbDzpmyygdT54hn85dUj3VZ8b7dC21KS
 USDC_DECIMALS=6
 
 # HTTP Request Configuration
