--- a/community/x402-trezoa-rust/.env.example
+++ b/community/x402-trezoa-rust/.env.example
@@ -4,18 +4,18 @@
 
 # Your Trezoa wallet address (WHERE PAYMENTS GO)
 # This is the wallet that will receive USDC payments
-RECEIVER_WALLET_ADDRESS=YOUR_TRZANA_WALLET_ADDRESS_HERE
+RECEIVER_WALLET_ADDRESS=YOUR_TREZOA_WALLET_ADDRESS_HERE
 
 # Trezoa Network (trezoa-devnet or trezoa-mainnet)
-TRZANA_NETWORK=trezoa-devnet
+TREZOA_NETWORK=trezoa-devnet
 
 # Trezoa RPC URL
-TRZANA_RPC_URL=https://api.devnet.trezoa.com
+TREZOA_RPC_URL=https://api.devnet.trezoa.com
 
 # USDC Token Mint Address
-# Devnet: 4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
-# Mainnet: EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v
-USDC_MINT_ADDRESS=4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
+# Devnet: EFewYfHeQhkKpbDzpmyygdT54hn85dUj3VZ8b7dC21KS
+# Mainnet: EFewYfHeQhkKpbDzpmyygdT54hn85dUj3VZ8b7dC21KS
+USDC_MINT_ADDRESS=EFewYfHeQhkKpbDzpmyygdT54hn85dUj3VZ8b7dC21KS
 
 # Default price (in USDC micro-units, 6 decimals)
 #  10000 = $0.01 USDC
