--- a/gill/gill-node-express/.env.example
+++ b/gill/gill-node-express/.env.example
@@ -1,4 +1,4 @@
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:8080
 PORT=3000
-TRZANA_RPC_ENDPOINT=https://api.devnet.trezoa.com
-TRZANA_SIGNER_PATH=./keypair-signer.json
+TREZOA_RPC_ENDPOINT=https://api.devnet.trezoa.com
+TREZOA_SIGNER_PATH=./keypair-signer.json
