--- a/gill/gill-node-script/.env.example
+++ b/gill/gill-node-script/.env.example
@@ -1,2 +1,2 @@
-TRZANA_RPC_ENDPOINT=https://api.devnet.trezoa.com
-TRZANA_SIGNER_PATH=~/.config/trezoa/id.json
+TREZOA_RPC_ENDPOINT=https://api.devnet.trezoa.com
+TREZOA_SIGNER_PATH=~/.config/trezoa/id.json
